Fix Python 3.7 Travis Config

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
 envlist = py36, py37, flake8
-skipsdist = true
 
 [travis]
 python =
@@ -15,9 +14,7 @@ commands = flake8 patch_rebaser
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-deps =
-     .
-     pytest
+deps = pytest
 commands =
     pip install -U pip
     py.test
