--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,18 @@
 
 language: python
 python:
-  - 3.7
   - 3.6
 
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
 
-# Command to run tests, e.g. python setup.py test
-script: tox
-
 matrix:
   include:
+    - python: 3.7
+      dist: xenial
     - python: 3.6
       env: TOXENV=flake8
+    - python: 3.6
+
+# Command to run tests, e.g. python setup.py test
+script: tox
