--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist = py36, py37, flake8
+envlist = py36, py37, py27, flake8
 
 [travis]
 python =
+    2.7: py27
     3.7: py37
     3.6: py36
 
@@ -14,7 +15,9 @@ commands = flake8 patch_rebaser
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-deps = pytest
+deps =
+    pytest
+    mock
 commands =
     pip install -U pip
     py.test
