Add config option for limiting the set of packages to process

--- a/patch_rebaser/patch_rebaser.ini
+++ b/patch_rebaser/patch_rebaser.ini
@@ -4,6 +4,9 @@ remote_name = remote_name
 # Git author/committer information, used during the rebase
 git_name = Your Name
 git_email = you@example.com
+# Comma-separated list of package names to process. Leave empty to
+# process all.
+packages_to_process =
 
 [distroinfo]
 # 'patches' is the default in rdoinfo for finding the patches repo
