Integration tests for rebasing and pushing

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ python =
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 patch_rebaser tests
+commands = flake8 patch_rebaser tests integration_tests
 
 [testenv]
 setenv =
@@ -20,3 +20,9 @@ deps = -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
     py.test --cov-report=term-missing --cov=patch_rebaser tests
+
+[testenv:integration]
+commands =
+    /usr/bin/find . -name '*.pyc' -delete  # Avoid issues with pytests conf file discovery
+    /usr/bin/sudo docker build -t patch_rebaser_integration_tests .
+    /usr/bin/sudo docker run patch_rebaser_integration_tests /bin/sh -c "pytest -k integration_tests integration_tests"  # Ensure we only run the integration tests
