--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,11 +1,38 @@
-pull_request_rules:
-  - name: automatic merge when CI passes and approvals
+---
+
+queue_rules:
+  - name: default
     conditions:
-      - "#approved-reviews-by>=1"
-      - status-success=continuous-integration/travis-ci/pr
-      - base=master
+      - '#approved-reviews-by>=2'
+      # Conditions to get out of the queue (= merged)
+      # Following to be uncommented once Github CI is set up
+      #- check-success=flake8
+      #- check-success=integration
+      #- check-success=test (2.7)
+      #- check-success=test (3.6)
+      #- check-success=test (3.7)
+      #- check-success=test (3.8)
+      #- check-success=test (3.9)
+      #- check-success=test (3.10)
+pull_request_rules:
+  - name: automatic merge
+    conditions:
+      - label!=(no-mergify|WIP)
+      - '#approved-reviews-by>=2'
+      # We have to duplicate these because mergify won't allow us to use an
+      # anchor
+      # Following to be uncommented once Github CI is set up
+      #- check-success=flake8
+      #- check-success=integration
+      #- check-success=test (2.7)
+      #- check-success=test (3.6)
+      #- check-success=test (3.7)
+      #- check-success=test (3.8)
+      #- check-success=test (3.9)
+      #- check-success=test (3.10)
     actions:
-      merge:
-        strict: true
+      queue:
         method: rebase
         rebase_fallback: merge
+        update_method: rebase
+        name: default
