Add gh actions config and remove travis CI
Added gh actions for flake8, tests, and integration tests. Removed
pytest-runner from setup.py as that seemed to be causing issues with py2.7.

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,11 @@
 [tox]
-envlist = py36, py37, py27, flake8
-
-[travis]
-python =
-    2.7: py27
-    3.7: py37
-    3.6: py36
-
-[testenv:flake8]
-basepython = python
-deps = flake8
-commands = flake8 patch_rebaser tests integration_tests
+envlist = 
+    py{27,36,37,38,39,310}
+    flake8
 
 [testenv]
+passenv=HOME
+sitepackages = False
 setenv =
     PYTHONPATH = {toxinidir}
 deps = -r{toxinidir}/requirements.txt
@@ -20,6 +13,13 @@ deps = -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
     py.test --cov-report=term-missing --cov=patch_rebaser tests
+
+[testenv:flake8]
+passenv=HOME
+sitepackages = False
+basepython = python
+deps = flake8
+commands = flake8 patch_rebaser tests integration_tests
 
 [testenv:integration]
 commands =
