--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,17 +3,15 @@
 queue_rules:
   - name: default
     conditions:
-      - '#approved-reviews-by>=2'
       # Conditions to get out of the queue (= merged)
-      # Following to be uncommented once Github CI is set up
-      #- check-success=flake8
-      #- check-success=integration
-      #- check-success=test (2.7)
-      #- check-success=test (3.6)
-      #- check-success=test (3.7)
-      #- check-success=test (3.8)
-      #- check-success=test (3.9)
-      #- check-success=test (3.10)
+      - check-success=flake8
+      - check-success=integration
+      - check-success=test (2.7)
+      - check-success=test (3.6)
+      - check-success=test (3.7)
+      - check-success=test (3.8)
+      - check-success=test (3.9)
+      - check-success=test (3.10)
 pull_request_rules:
   - name: automatic merge
     conditions:
@@ -21,15 +19,14 @@ pull_request_rules:
       - '#approved-reviews-by>=2'
       # We have to duplicate these because mergify won't allow us to use an
       # anchor
-      # Following to be uncommented once Github CI is set up
-      #- check-success=flake8
-      #- check-success=integration
-      #- check-success=test (2.7)
-      #- check-success=test (3.6)
-      #- check-success=test (3.7)
-      #- check-success=test (3.8)
-      #- check-success=test (3.9)
-      #- check-success=test (3.10)
+      - check-success=flake8
+      - check-success=integration
+      - check-success=test (2.7)
+      - check-success=test (3.6)
+      - check-success=test (3.7)
+      - check-success=test (3.8)
+      - check-success=test (3.9)
+      - check-success=test (3.10)
     actions:
       queue:
         method: rebase
