Update github action versions.
Update supported versions of python, as we only went up to python 3.9,
and 3.6 is now EOL:
https://devguide.python.org/versions/

Release versions of checkout and python actions also needed to be
updated due to github changing the node they run on:
https://github.blog/changelog/2022-09-22-github-actions-all-actions-will-begin-running-on-node16-instead-of-node12/

Removing mergify because github now offers functionality that is 'close
enough', and the churn in mergify config has turned out to be more
effort than we feel it is worth.

Minor tweaks to test dependencies to keep in line with our other
projects.

Removed incorrect version references.

Minor fix to tox.in to whitelist external commands, and
structure it more consostently with other projects.

Signed-off-by: Jason Guiditta <jguiditt@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,33 +1,34 @@
 [tox]
 envlist = 
-    py{36,37,38,39,310}
+    py{37,38,39,310,311}
     flake8
 
 [testenv]
 passenv=HOME
 sitepackages = False
-setenv =
-    PYTHONPATH = {toxinidir}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
-    pip install -U pip
-    py.test --cov-report=term-missing --cov=patch_rebaser tests
+    pytest --cov-report=term-missing --cov=patch_rebaser tests
 
 [testenv:flake8]
 passenv=HOME
 sitepackages = False
-basepython = python
-deps = flake8
 commands = flake8 patch_rebaser tests integration_tests
 
 [testenv:integration]
+allowlist_externals =
+    /usr/bin/find
+    /usr/bin/sudo
 commands =
     /usr/bin/find . -name '*.pyc' -delete  # Avoid issues with pytests conf file discovery
     /usr/bin/sudo docker build -t patch_rebaser_integration_tests .
     /usr/bin/sudo docker run patch_rebaser_integration_tests /bin/sh -c "pytest -k integration_tests integration_tests"  # Ensure we only run the integration tests
 
 [testenv:integration_podman]
+allowlist_externals =
+    /usr/bin/find
+    /usr/bin/podman
 commands =
     /usr/bin/find . -name '*.pyc' -delete  # Avoid issues with pytests conf file discovery
     /usr/bin/podman build -t patch_rebaser_integration_tests .
