--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,11 +8,11 @@ jobs:
       runs-on: ubuntu-latest
       strategy:
         matrix:
-          python: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+          python: ['3.7', '3.8', '3.9', '3.10', '3.11']
       steps:
-        - uses: actions/checkout@v2
+        - uses: actions/checkout@v3
         - name: Setup Python
-          uses: actions/setup-python@v2
+          uses: actions/setup-python@v4
           with:
             python-version: ${{ matrix.python }}
         - name: Install Tox and any other packages
@@ -24,11 +24,11 @@ jobs:
     flake8:
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v2
+        - uses: actions/checkout@v3
         - name: Setup Python
-          uses: actions/setup-python@v2
+          uses: actions/setup-python@v4
           with:
-            python-version: "3.10"
+            python-version: 3.11
         - name: Install Tox and any other packages
           run: |
             python -m pip install --upgrade pip
@@ -38,11 +38,11 @@ jobs:
     integration:
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v2
+        - uses: actions/checkout@v3
         - name: Setup Python
-          uses: actions/setup-python@v2
+          uses: actions/setup-python@v4
           with:
-            python-version: "3.10"
+            python-version: 3.11
         - name: Install Tox and any other packages
           run: |
             python -m pip install --upgrade pip
