Add ability to define DLRN driver in INI config file
Currently, the patch_rebaser script only gets parameter from
'downstream_driver' section of the DLRN projects.ini file, which is
hardcoded [1].
This patch aims to add support of defining the driver, thus the INI
section, where we want to get the 'downstream_distro_branch' value.

We set 'downstream_driver' as default value for 'dlrn_driver' key.

[1] https://github.com/release-depot/patch_rebaser/blob/d81ca9a64acb6c0b8638373c3aea2ca15e796a77/patch_rebaser/patch_rebaser.py#L76

--- a/patch_rebaser/patch_rebaser.ini.example
+++ b/patch_rebaser/patch_rebaser.ini.example
@@ -9,6 +9,9 @@ git_email = you@example.com
 packages_to_process =
 # Location of DLRN projects.ini file (optional)
 dlrn_projects_ini =
+# DLRN driver used, in order to get the parameters from the right
+# section of the DLRN projects.ini file. (optional)
+dlrn_driver =
 # Do not force-push to remotes or do other destructive operations
 # while in development mode
 dev_mode = true
