--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,9 @@ jobs:
       runs-on: ubuntu-latest
       strategy:
         matrix:
-          python: ['3.7', '3.8', '3.9', '3.10', '3.11']
+          python: ['3.9', '3.10', '3.11', '3.12']
       steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@v4
         - name: Setup Python
           uses: actions/setup-python@v4
           with:
@@ -24,11 +24,11 @@ jobs:
     flake8:
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@v4
         - name: Setup Python
           uses: actions/setup-python@v4
           with:
-            python-version: 3.11
+            python-version: 3.12
         - name: Install Tox and any other packages
           run: |
             python -m pip install --upgrade pip
@@ -38,11 +38,11 @@ jobs:
     integration:
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@v4
         - name: Setup Python
           uses: actions/setup-python@v4
           with:
-            python-version: 3.11
+            python-version: 3.12
         - name: Install Tox and any other packages
           run: |
             python -m pip install --upgrade pip
